--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -1,20 +1,4 @@
-%nav.flex.items-center.justify-between.flex-wrap.bg-teal.p-6
+%nav.flex.items-center.justify-between.flex-wrap.bg-orange-ca-light.p-6
   .flex.items-center.flex-no-shrink.text-white.mr-6
-    %svg.fill-current.h-8.w-8.mr-2{height: "54", viewbox: "0 0 54 54", width: "54", xmlns: "http://www.w3.org/2000/svg"}
-      %path{:d => "M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z"}
-    %span.font-semibold.text-xl.tracking-tight Tailwind CSS
-  .block.lg:hidden
-    %button.flex.items-center.px-3.py-2.border.rounded.text-teal-lighter.border-teal-light.hover:text-white.hover:border-white
-      %svg.fill-current.h-3.w-3{viewbox: "0 0 20 20", xmlns: "http://www.w3.org/2000/svg"}
-        %title Menu
-        %path{d: "M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"}
-  .w-full.block.flex-grow.lg:flex.lg:items-center.lg:w-auto
-    .text-sm.lg:flex-grow
-      %a.block.mt-4.lg:inline-block.lg:mt-0.text-teal-lighter.hover:text-white.mr-4{href: "#responsive-header"}
-        Docs
-      %a.block.mt-4.lg:inline-block.lg:mt-0.text-teal-lighter.hover:text-white.mr-4{href: "#responsive-header"}
-        Examples
-      %a.block.mt-4.lg:inline-block.lg:mt-0.text-teal-lighter.hover:text-white{href: "#responsive-header"}
-        Blog
-    %div
-      %a.inline-block.text-sm.px-4.py-2.leading-none.border.rounded.text-white.border-white.hover:border-transparent.hover:text-teal.hover:bg-white.mt-4.lg:mt-0{:href => "#"} Download
+    %span= image_tag 'ca_basic_logo_320x40.png', alt: 'CA Logo'
+  
