WIP creating footer setup footer but not sticking to bottom of screen

--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -1,4 +1,4 @@
 %nav.flex.items-center.justify-between.flex-wrap.bg-orange-ca-light.p-6
-  .flex.items-center.flex-no-shrink.text-white.mr-6
+  .flex.items-center.flex-no-shrink.mr-6
     %span= image_tag 'ca_basic_logo_320x40.png', alt: 'CA Logo'
   
