--- a/app/views/partials/_footer.html.haml
+++ b/app/views/partials/_footer.html.haml
@@ -1,3 +1,2 @@
-%footer.flex.flex-row-reverse.items-center.justify-between.flex-wrap.bg-orange-ca.p-6
-	.flex.items-center.flex-no-shrink.mr-6
-		= image_tag 'graphic_only_logo_white.png', alt: 'CA logo'
+%footer.flex.flex-row-reverse.bg-orange-ca.p-6
+	= image_tag 'graphic_only_logo_white.png', alt: 'CA logo'
