SPIKE: adds working solution for tailswind popup using partials, js and content_for helper

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -4,3 +4,5 @@
     - if current_user == @member 
         %div
             This is your profile as seen by other members and recruiters.
+        %div
+            = link_to 'Edit', edit_member_path(@member), remote: true
