--- a/app/views/members/_edit.html.haml
+++ b/app/views/members/_edit.html.haml
@@ -1,5 +1,5 @@
 - content_for :modal_content do
-    = form_with url: member_path(current_user), scope: :user, local: true, class: 'w-full max-w-md' do |form|
+    = form_with url: member_path(current_user), scope: :member, method: :patch, local: true, class: 'w-full max-w-md' do |form|
         %div{class: 'flex flex-wrap -mx-3 mb-6'}
             %div{class: "w-full px-3 mb-6 md:mb-0"}
                 = form.label :email, class: 'block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2'
@@ -13,7 +13,7 @@
                 = form.text_field :last_name, value: current_user.last_name, class: 'appearance-none block w-full bg-grey-lighter text-grey-darker rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'
         %div{class: 'md:flex md:items-center'}
             %div{class: "w-full md:w-1/2 px-3 mb-6 md:mb-0"}
-                = form.submit class: 'shadow bg-orange-ca hover:bg-orange-ca-light focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded' 
+                = form.submit 'Update', class: 'shadow bg-orange-ca hover:bg-orange-ca-light focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded' 
 
 = render partial: 'partials/modal'
 
