--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -4,5 +4,5 @@
     - if current_user == @member 
         %div
             This is your profile as seen by other members and recruiters.
-        %div
-            = link_to 'Edit', edit_member_path(@member), remote: true
+        %div{class: "w-full md:w-1/2 px-3 mb-6 md:mb-0"}
+            = link_to 'Edit', edit_member_path(@member), remote: true, class: 'shadow bg-orange-ca hover:bg-orange-ca-light focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded' 
