styling fixes WIP tailwind css...

--- a/app/views/members/edit.js.erb
+++ b/app/views/members/edit.js.erb
@@ -1,2 +1,2 @@
 App.windowContent.insertAdjacentHTML('afterend', '<%= escape_javascript(render partial: 'edit')%>');
-closeModalListener()
+closeModalListener('cancel_modal')
