--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -1,8 +1,11 @@
 #profile
-    %h1
-        = @member.display_name
-    - if current_user == @member 
-        %div
-            This is your profile as seen by other members and recruiters.
-        %div{class: "w-full md:w-1/2 px-3 mb-6 md:mb-0"}
-            = link_to 'Edit', edit_member_path(@member), remote: true, class: 'shadow bg-orange-ca hover:bg-orange-ca-light focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded' 
+    .flex.mb-4
+        %div{class: 'w-1/4'}
+            .text-3xl.font-medium.text-grey-darkest
+                = @member.display_name
+        %div{class: 'w-3/4'}
+            - if current_user == @member 
+                .text-xl.text-grey-dark.font-light
+                    This is your profile as seen by other members and recruiters.
+                %div{class: "w-full md:w-1/2 px-3 mb-6 md:mb-0"}
+                    = link_to 'Edit', edit_member_path(@member), remote: true, class: 'shadow bg-orange-ca hover:bg-orange-ca-light focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded' 
