refactors css structure. Breaks sticky footer

--- a/app/views/partials/_footer.html.haml
+++ b/app/views/partials/_footer.html.haml
@@ -1,2 +1,32 @@
-%footer.flex.flex-row-reverse.bg-orange-ca.p-6
-	= image_tag 'graphic_only_logo_white.png', alt: 'CA logo'
+%footer.font-sans.bg-orange-ca.text-white.py-8.px-4.pin-b
+	.mx-auto.container.overflow-hidden.flex.flex-col.lg:flex-row.justify-between
+		= link_to image_tag('graphic_only_logo_white.png', alt: 'CA logo', class: 'w-32'), root_path, class: 'block mr-4 w-1/2'
+		.flex.text-sm.mt-6.lg:mt-0{class: "w-1/2"}
+			%ul.text-grey-dark.list-reset.font-thin.flex.flex-col.text-left
+				%li.inline-block.py-2.px-3.text-white.uppercase.no-underline.font-medium.tracking-wide Product
+				%li
+					%a.inline-block.py-2.px-3.text-grey.hover:text-grey-light.no-underline{href: "#"} Popular
+				%li
+					%a.inline-block.py-2.px-3.text-grey.hover:text-grey-light.no-underline{href: "#"} Trending
+			%ul.text-grey-dark.list-reset.font-thin.flex.flex-col.text-left
+				%li.inline-block.py-2.px-3.text-white.uppercase.no-underline.font-medium.tracking-wide Company
+				%li
+					%a.inline-block.py-2.px-3.text-grey.hover:text-grey-light.no-underline{href: "#"} Mission
+				%li
+				%a.inline-block.py-2.px-3.text-grey.hover:text-grey-light.no-underline{href: "#"} Strategy
+			%ul.text-grey-dark.list-reset.font-thin.flex.flex-col.text-left
+				%li.inline-block.py-2.px-3.text-white.uppercase.no-underline.font-medium.tracking-wide Info
+				%li
+					%a.inline-block.py-2.px-3.text-grey.hover:text-grey-light.no-underline{href: "#"} Support
+				%li
+					%a.inline-block.py-2.px-3.text-grey.hover:text-grey-light.no-underline{href: "#"} Developers
+			.text-grey-dark.flex.flex-col
+				.inline-block.py-2.px-3.text-white.uppercase.font-medium.tracking-wide Follow Us
+				.flex.pl-4.justify-start
+					%a.block.flex.items-center.text-white.hover:text-grey.mr-6.no-underline{href: "#"}
+						%i.fab.fa-github-alt
+					%a.block.flex.items-center.text-white.hover:text-grey.mr-6.no-underline{href: "#"}
+						%i.fab.fa-slack
+					%a.block.flex.items-center.text-white.hover:text-grey.no-underline{href: "#"}
+						%i.fab.fa-twitter
+	.pt-4.mt-4.text-grey-darker.border-t.border-grey-darkest.text-center ©2018 Craft Academy. All rights reserved.
