--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
 
   %body.flex.flex-col.h-full
     = render partial: 'partials/header'
-    .flex-1#content
+    %section#content.my-8.container.m-auto.max-w-xl 
       = alert || notice
       = yield
     .pin-b
