--- a/app/views/partials/_footer.html.haml
+++ b/app/views/partials/_footer.html.haml
@@ -21,7 +21,7 @@
 				%li
 					%a.inline-block.py-2.px-3.text-grey.hover:text-grey-light.no-underline{href: "#"} Developers
 			.text-grey-dark.flex.flex-col
-				.inline-block.py-2.px-3.text-white.uppercase.font-medium.tracking-wide Follow Us
+				.ca-footer-header Follow Us
 				.flex.pl-4.justify-start
 					%a.block.flex.items-center.text-white.hover:text-grey.mr-6.no-underline{href: "#"}
 						%i.fab.fa-github-alt
