--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -9,7 +9,7 @@
       %a.inline-block.py-2.px-3.text-grey-darkest.hover:text-grey-dark.no-underline{href: "#"} FAQs
     %li.pl-2.border-l
       %a.inline-block.py-2.px-3.text-grey-darkest.hover:text-grey-dark.no-underline{href: "#"} Log In
-    %button.bg-black.hover:bg-grey-darker.text-white.ml-4.py-2.px-3
+    %button.ca-button
       Sign Up
 
   
