--- a/app/javascript/css/tailwind.scss
+++ b/app/javascript/css/tailwind.scss
@@ -61,3 +61,16 @@
  * @import "utilities/background-patterns";
  * @import "utilities/skew-transforms";
  */
+
+ .ca-footer-header {
+    @apply  inline-block py-2 px-3 text-white uppercase font-medium tracking-wide;
+ }
+
+ .ca-button {
+     @apply bg-orange-ca text-white ml-4 py-2 px-3;
+     
+     :hover {
+        @apply bg-orange-ca-light;
+     }
+ }
+
