--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -3,9 +3,10 @@
         %div{class: 'w-1/4'}
             .text-3xl.font-medium.text-grey-darkest
                 = @member.display_name
+            %div{class: "w-full md:w-1/2 px-3 mb-6 md:mb-0 pt "}
+                = link_to 'Edit', edit_member_path(@member), remote: true, class: 'ca-button'
         %div{class: 'w-3/4'}
             - if current_user == @member 
                 .text-xl.text-grey-dark.font-light
                     This is your profile as seen by other members and recruiters.
-                %div{class: "w-full md:w-1/2 px-3 mb-6 md:mb-0"}
-                    = link_to 'Edit', edit_member_path(@member), remote: true, class: 'ca-button'
+        
