--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -4,9 +4,9 @@
     %li
       = link_to 'For Recruiters', '#', class: 'ca-header-link'
     %li.pr-2
-      = link_to 'Pricing' , '#', class: `ca-header-link`
+      = link_to 'Pricing' , '#', class: 'ca-header-link'
     %li.pr-2
-      = link_to 'FAQs' , '#', class: `ca-header-link`
+      = link_to 'FAQs' , '#', class: 'ca-header-link'
     - if user_signed_in?
       = link_to 'Sign Out', destroy_user_session_path, method: :delete
     - else
