--- a/app/javascript/css/tailwind.scss
+++ b/app/javascript/css/tailwind.scss
@@ -62,6 +62,9 @@
  * @import "utilities/skew-transforms";
  */
 
+
+
+
 .ca-button {
     @apply bg-orange-ca text-white ml-4 py-2 px-3 no-underline ;
 }
@@ -75,7 +78,7 @@
 }
 
 .ca-header-link:hover {
-    @apply text-grey-light ;
+    @apply text-grey-darker ;
 }
 
 .ca-footer-header {
@@ -91,8 +94,13 @@
 }
 
 .ca-footer-icon-link {
-    @apply  block flex items-center text-white.hover text-grey-lighter  mr-6 no-underline ;
+    @apply  block flex items-center text-white mr-6 no-underline ;
 }
+
+.ca-footer-icon-link:hover {
+    @apply  text-grey-lighter ;
+}
+
 
 .ca-footer-copyright {
     @apply pt-4 mt-4 text-xs text-white border-t border-white text-center ;
