--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -12,8 +12,8 @@
         = link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'ca-button'
     - else
       %li.pl-2.border-l
-        = link_to 'Log In' , new_user_session_path, class: 'ca-button'
+        = link_to 'Log In' , new_user_session_path, class: 'ca-button', remote: true
       %li
-        = link_to 'Sign Up', new_user_registration_path, class: 'ca-button'
+        = link_to 'Sign Up', new_user_registration_path, class: 'ca-button', remote: true
 
   
