--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -15,5 +15,7 @@
         = link_to 'Log In' , new_user_session_path
       %li.ca-button
         = link_to 'Sign Up', new_user_registration_path
+      %li.ca-button
+        = link_to 'Login with LinkedIn'
 
   
