--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -16,6 +16,6 @@
       %li.ca-button
         = link_to 'Sign Up', new_user_registration_path
       %li.ca-button
-        = link_to 'Login with LinkedIn'
+        = link_to 'Login with LinkedIn', user_linkedin_omniauth_authorize_path
 
   
