--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -16,6 +16,6 @@
       %li
         = link_to 'Sign Up', new_user_registration_path, class: 'ca-button', remote: true
       %li
-        = link_to 'Login with LinkedIn', user_linkedin_omniauth_authorize_path, class: 'ca-button', remote: true
+        = link_to 'Login with LinkedIn', user_linkedin_omniauth_authorize_path, class: 'ca-button'
 
   
