--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -17,5 +17,7 @@
         = link_to 'Sign Up', new_user_registration_path, class: 'ca-button', remote: true
       %li
         = link_to 'Login with LinkedIn', user_linkedin_omniauth_authorize_path, class: 'ca-button'
+      %li
+        = link_to 'Login with CaX', user_cognitive_class_omniauth_authorize_path, class: 'ca-button'
 
   
