--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
     = javascript_include_tag 'application', data: {'turbolinks-track' => 'reload'}
     = stylesheet_pack_tag 'application'
     = javascript_pack_tag 'application'
+    %script{src: 'https://js.stripe.com/v3/'}
 
   %body.flex.flex-col.h-full
     = render partial: 'partials/header'
