--- a/app/views/devise/registrations/new.js.erb
+++ b/app/views/devise/registrations/new.js.erb
@@ -1,3 +1,2 @@
-'<%= escape_javascript(binding.pry)%>'
-App.windowContent.insertAdjacentHTML('afterend', '<%= escape_javascript(render partial: 'form')%>');
+App.windowContent.insertAdjacentHTML('afterend', '<%= escape_javascript(render partial: "#{@form}")%>');
 closeModalListener('cancel_modal')
