--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -16,8 +16,8 @@
       %li
         = link_to 'Sign Up', new_user_registration_path, class: 'ca-button', remote: true
       %li
-        = link_to 'Sign Up with CA credentials', new_user_registration_path(id: 'ca_cred'), class: 'ca-button', remote: true 
+        = link_to 'LinkedIn', user_linkedin_omniauth_authorize_path, class: 'ca-button'
       %li
-        = link_to 'Login with LinkedIn', user_linkedin_omniauth_authorize_path, class: 'ca-button'
+        = link_to 'CraftEd', user_crafted_oauth_omniauth_authorize_path, class: 'ca-button'
 
   
