WIP cleaning out unnecessary code

--- a/app/views/devise/registrations/new.js.erb
+++ b/app/views/devise/registrations/new.js.erb
@@ -1,2 +1,2 @@
-App.windowContent.insertAdjacentHTML('afterend', '<%= escape_javascript(render partial: "#{@form}")%>');
+App.windowContent.insertAdjacentHTML('afterend', '<%= escape_javascript(render partial: 'form')%>');
 closeModalListener('cancel_modal')
