--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
     = render partial: 'partials/header'
     %section#content.flex-1.my-8.container.m-auto.max-w-xl 
       = alert || notice
-      = yield
+      #content
+        = yield
     .pin-b
       = render partial: 'partials/footer'
