--- a/app/views/admin/users/create.js.erb
+++ b/app/views/admin/users/create.js.erb
@@ -1,3 +1,3 @@
-let message = "<%= escape_javascript(@message)%>"
+var message = "<%= escape_javascript(@message)%>"
 
 App.windowContent.innerHTML = message
