--- a/app/views/admin/users/_new.html.haml
+++ b/app/views/admin/users/_new.html.haml
@@ -1,19 +1,19 @@
 - content_for :modal_content do
-    = form_with url: admin_users_path, scope: :user, class: 'w-full max-w-md' do |form|
-        %div{class: 'flex flex-wrap -mx-3 mb-6'}
-            %div{class: "w-full px-3 mb-6 md:mb-0"}
+    = form_with url: admin_users_path, scope: :user, class: 'ca-form' do |form|
+        .ca-field-wrapper
+            .ca-field-full-width
                 = form.label :email, class:  'ca-form-label'
                 = form.email_field :email, class: 'ca-form-input-field'
-        %div{class: 'flex flex-wrap -mx-3 mb-6'}
-            %div{class: "w-full px-3 mb-6 md:mb-0"}
+        .ca-field-wrapper
+            .ca-field-full-width
                 = form.label :first_name, class:  'ca-form-label'
                 = form.text_field :first_name, class: 'ca-form-input-field'
-        %div{class: 'flex flex-wrap -mx-3 mb-6'}
-            %div{class: "w-full px-3 mb-6 md:mb-0"}
+        .ca-field-wrapper
+            .ca-field-full-width
                 = form.label :last_name, class:  'ca-form-label'
                 = form.text_field :last_name, class: 'ca-form-input-field'
-        %div{class: 'flex flex-wrap -mx-3 mb-6'}
-            %div{class: "w-full px-3 mb-6 md:mb-0"}
+        .ca-field-wrapper
+            .ca-field-full-width
                 = form.submit 'Create member', class: 'ca-button'
                 = button_tag 'Cancel', id: 'cancel_modal', class: 'ca-button-transparent'
 
