--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -2,4 +2,5 @@
     - @members.each do |member|
         %div{id: dom_id(member)}
             = member.display_name
+            = member.gender
             = link_to "View profile", member_path(member)
