--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -3,4 +3,5 @@
         %div{id: dom_id(member)}
             = member.display_name
             = member.gender
+            = "Age: #{member.age}"
             = link_to "View profile", member_path(member)
