Fix seed file, add container to div

--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,6 +1,7 @@
 .members
     - @members.each do |member|
         %div{id: dom_id(member)}
+        .container
             = member.display_name
             = member.gender
             = "Age: #{member.age}"
