--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -7,7 +7,8 @@
             %div{class: "w-full md:w-1/2 px-3 mb-6 md:mb-0 pt-2"}
                 = link_to 'Edit', edit_member_path(@member), remote: true, class: 'ca-button'
         %div{class: 'w-3/4'}
-            - if current_user == @member 
+            = @member.gender
+            = @member.age
+            - if current_user == @member
                 .text-xl.text-grey-dark.font-light
                     This is your profile as seen by other members and recruiters.
-        
