--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,12 +1,15 @@
 .members
     - @members.each do |member|
         %div{id: dom_id(member)}
-            .container
-                .text-2xl.font-medium.text-grey-darkest
+            .max-w-md.w-full.lg:flex
+                .h-48.lg:h-auto.lg:w-48.flex-none.bg-cover.rounded-t.lg:rounded-t-none.lg:rounded-l.text-center.overflow-hidden{style: "background-image: url('https://tailwindcss.com/img/card-left.jpg')"}
+                .border-r.border-b.border-l.border-grey-light.lg:border-l-0.lg:border-t.lg:border-grey-light.bg-white.rounded-b.lg:rounded-b-none.lg:rounded-r.p-4.flex.flex-col.justify-between.leading-normal
+                .mb-8
+                    %p.text-sm.text-grey-dark.flex.items-center
+                    %svg.fill-current.text-grey.w-3.h-3.mr-2{viewbox: "0 0 20 20", xmlns: "http://www.w3.org/2000/svg"}
+                        %path{d: "M4 8V6a6 6 0 1 1 12 0v2h1a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-8c0-1.1.9-2 2-2h1zm5 6.73V17h2v-2.27a2 2 0 1 0-2 0zM7 6v2h6V6a3 3 0 0 0-6 0z"}
+                .text-black.font-bold.text-xl.mb-2
                     = member.display_name
-                %div{class: "w-full md:w-1/2 pb-3 mb-6 md:mb-0"}
-                    = member.gender
-                    = "Age: #{member.age}"
-                %div
+                %p.text-grey-darker.text-base
                     = link_to "View profile", member_path(member), class: 'ca-button'
-                %br
+
