add projects to the profile show page add private method in resource model  to use type column without STI and enum for type

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -20,3 +20,6 @@
                 .max-w-sm.mt-4.sm:flex
                     = link_to 'Learn more', new_subscription_path, class: 'ca-button'
         
+    .resources
+        -@member.resources.each do |project|
+            .text-3xl.font-medium.text-grey-darkest= project.description
