--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,3 +1,4 @@
+
 .members
     - @members.each do |member|
         %div{id: dom_id(member)}
@@ -6,10 +7,14 @@
                 .border-r.border-b.border-l.border-grey-light.lg:border-l-0.lg:border-t.lg:border-grey-light.bg-white.rounded-b.lg:rounded-b-none.lg:rounded-r.p-4.flex.flex-col.justify-between.leading-normal
                 .mb-8
                     %p.text-sm.text-grey-dark.flex.items-center
-                    %svg.fill-current.text-grey.w-3.h-3.mr-2{viewbox: "0 0 20 20", xmlns: "http://www.w3.org/2000/svg"}
-                        %path{d: "M4 8V6a6 6 0 1 1 12 0v2h1a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-8c0-1.1.9-2 2-2h1zm5 6.73V17h2v-2.27a2 2 0 1 0-2 0zM7 6v2h6V6a3 3 0 0 0-6 0z"}
-                .text-black.font-bold.text-xl.mb-2
-                    = member.display_name
-                %p.text-grey-darker.text-base
-                    = link_to "View profile", member_path(member), class: 'ca-button'
+                        .text-black.font-bold.text-lg.text-center
+                            = member.display_name
+                        .text-black.text-sm.text-center
+                            = "Age: #{member.age}"
+                            %br
+                            = "#{member.gender}"
+                        %br
+                            %p.text-grey-darker.text-base.text-center
+                                = link_to "View profile", member_path(member), class: 'ca-button'
+%br
 
