[CHORE] makes use of the popup/modal flow when displaying a user show

--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -2,4 +2,4 @@
     - @members.each do |member|
         %div{id: dom_id(member)}
             = member.display_name
-            = link_to "View profile", member_path(member)
+            = link_to "View profile", member_path(member), remote: true
