--- a/app/views/members/_edit.html.haml
+++ b/app/views/members/_edit.html.haml
@@ -1,5 +1,6 @@
 - content_for :modal_content do
-    = form_with url: member_path(current_user), scope: :member, method: :patch, local: true, class: 'w-full max-w-md' do |form|
+    = form_with url: member_path(current_user), scope: :member, id: :create_member, method: :patch, class: 'w-full max-w-md' do |form|
+        #error_messages
         %div{class: 'flex flex-wrap -mx-3 mb-6'}
             %div{class: "w-full px-3 mb-6 md:mb-0"}
                 = form.label :email, class: 'block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2'
