--- a/app/views/partials/_modal.html.haml
+++ b/app/views/partials/_modal.html.haml
@@ -1,3 +1,4 @@
 #modal.animated.fadeIn.fixed.z-50.pin.overflow-auto.bg-smoke-dark.flex
     .animated.fadeInUp.fixed.shadow-inner.max-w-md.md:relative.pin-b.pin-x.align-top.m-auto.justify-end.md:justify-center.p-8.bg-white.md:rounded.w-full.md:h-auto.md:shadow.flex.flex-col
         = content_for :modal_content
+        = button_tag 'X', id: 'cancel_modal', class: 'ca-popup'
