Add link to members resources on show page
Co-authored-by: Magnús Þór Ársælsson <magnus.thor.ar@gmail.com>

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -21,5 +21,8 @@
                     = link_to 'Learn more', new_subscription_path, class: 'ca-button'
         
     .resources
-        -@member.resources.each do |project|
-            .text-3xl.font-medium.text-grey-darkest= project.description
+        -@member.resources.each do |resource|
+            %div{id: dom_id(resource)}
+                .text-3xl.font-medium.text-grey-darkest= resource.description
+                .max-w-sm.mt-4.sm:flex
+                    = link_to "Visit #{resource.of_type}", resource.url
