--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -1,4 +1,4 @@
-%nav.font-sans.bg-white.text-center.flex.justify-between.my-4.mx-auto.container.overflow-hidden
+%nav.font-sans.bg-white.text-center.flex.justify-between.my-4.mx-auto.container.overflow-visable
   = link_to image_tag('ca_basic_logo_320x40.png', class: 'h-10 sm:h-10 rounded-full'), root_path, class: 'block text-left'
   %ul.text-sm.text-grey-dark.list-reset.flex.items-center
     %li
