Add cookie consent gem and configure

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,4 +18,6 @@
         = yield
       #added_content
     .pin-b
+      = render 'cookies_eu/consent_banner'
       = render partial: 'partials/footer'
+      
