--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -14,5 +14,5 @@
                     %p.text-grey-darker.text-base
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam qui, doloremque veritatis sed similique debitis nam sit rerum ducimus? Ducimus dignissimos rem voluptatum possimus aliquam deleniti soluta! Odit, nesciunt quidem!
                         %div.pt-5
-                            = link_to "View profile", member_path(member), class: 'ca-button'
+                            = link_to "View profile", member_path(member), class: 'ca-button', remote: true
                     .flex.items-center
