change scss class name

--- a/app/javascript/css/tailwind.scss
+++ b/app/javascript/css/tailwind.scss
@@ -195,7 +195,7 @@
     }
 }
 
-.profile-card-grid {
+.resource-card-grid {
     display: grid;
     grid-template-columns: 60% 40%;
     margin-bottom: 10px;
