--- a/app/views/members/_show.html.haml
+++ b/app/views/members/_show.html.haml
@@ -20,12 +20,22 @@
                         Purchase a subscription to see full member profile.
                     .max-w-sm.mt-4.sm:flex
                         = link_to 'Learn more', new_subscription_path, class: 'ca-button'
-        -@member.resources.each do |resource|
+        - @member.resources.each do |resource|
             %div{id: dom_id(resource)}
                 .resource-card-grid
                     %div
                         .text-l.font-medium.text-grey-darkest= resource.description
                     %div
                         %p= link_to "Visit #{resource.of_type}", resource.url, class: 'no-underline text-orange-ca'
+        %h2 Soft skills
+        -@member.skills.soft.each do |soft_skill|
+            %div{id: dom_id(soft_skill)}
+                .text-l.font-medium.text-grey-darkest= soft_skill.name
+
+
+        %h2 Tech skills
+        -@member.skills.tech.each do |tech_skill|
+            %div{id: dom_id(tech_skill)}
+                .text-l.font-medium.text-grey-darkest= tech_skill.name
 
 = render partial: 'partials/modal'
