--- a/app/views/members/_show.html.haml
+++ b/app/views/members/_show.html.haml
@@ -27,17 +27,19 @@
                         .text-l.font-medium.text-grey-darkest= resource.description
                     %div
                         %p= link_to "Visit #{resource.of_type}", resource.url, class: 'no-underline text-orange-ca'
-        %h2 Soft skills
-        -@member.skills.soft.each do |soft_skill|
-            %div{id: dom_id(soft_skill)}
-                .text-l.font-medium.text-grey-darkest= soft_skill.name
-                .text-l.font-medium.text-grey-darkest= "Proficiency: #{soft_skill.proficiency.capitalize}"
+        .skill-grid
+            .soft
+                %h2 Soft skills
+                -@member.skills.soft.each do |soft_skill|
+                    %div{id: dom_id(soft_skill)}
+                        .text-l.font-medium.text-grey-darkest= soft_skill.name
+                        .text-l.font-medium.text-grey-darkest= "Proficiency: #{soft_skill.proficiency.capitalize}"
 
-
-        %h2 Tech skills
-        -@member.skills.tech.each do |tech_skill|
-            %div{id: dom_id(tech_skill)}
-                .text-l.font-medium.text-grey-darkest= tech_skill.name
-                .text-l.font-medium.text-grey-darkest= "Proficiency: #{tech_skill.proficiency.capitalize}"
+            .tech
+                %h2 Tech skills
+                -@member.skills.tech.each do |tech_skill|
+                    %div{id: dom_id(tech_skill)}
+                        .text-l.font-medium.text-grey-darkest= tech_skill.name
+                        .text-l.font-medium.text-grey-darkest= "Proficiency: #{tech_skill.proficiency.capitalize}"
 
 = render partial: 'partials/modal'
