--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,25 +1,23 @@
 .intro
-  .text-center
-    %h4.leader Are you ready to challenge yourself?
-    %h1
-      Tech as a craft
-      %br>
-      in twelve weeks
+  .text-center.py-24.paddingx-content 
+    %h1 About Craft Academy
     %p
       %strong
-        With Craft Academy, you'll learn tech and web development in an exciting, fast-paced environment and get help to find your first job in the IT industry or build your own project.
-    %small
-      %strong
-        Upcoming courses:
-    %h4.leader
-      Full Stack Web Developer Bootcamp
-      \-
-      21 Jan 2019
-    %h4.leader
-      Full Stack Web Developer Bootcamp
-      \-
-      1 Apr 2019
-    %h4.leader
-      Cyber Security Specialist Bootcamp
-      \-
-      4 Feb 2019
+        Craft Academy is a twelve-week intensive course designed to take you from zero to junior programmer. We're a group of dedicated coaches with decades of coding experience.
+%hr
+%section.text-center.paddingx-content.py-24
+  %article
+    %h3 Our mission
+    %h4.copy--left We aim to provide our students with the most effective training possible to prepare them - in an incredibly short time - to join the technical workforce, or build their own advanced projects.
+    %p.copy--left There is a strong need for web developers in Sweden and throughout the world. We train programmers who not only write great code, but who understand the industry's conventions, problem solve with intention, and are ready to join the workforce and be a productive member of a team. We believe that coding is a craft, not just the symbols you put into a program. To that end, we teach an ambitious array of coding skills, introducing students to dozens of tools and two coding languages, but we also teach coding methods like Agile and Test-Driven Development. These practices mold developers who will thrive in the real world.
+%hr
+.apply-section.text-center.paddingx-content.py-24
+  .centered-row
+    .column
+      %h2 Apply now
+      %p
+        %strong
+          We start a new course every eight weeks and continuously review and accept applicants. The application process can take up to two weeks, so please apply in time!
+  .button-row
+    %p
+      %a.button.button--vertical.button--large{href: "https://craftacademy.typeform.com/to/hkkxKQ"} Apply Now
