--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
 
   %body.flex.flex-col.h-full
     = render partial: 'partials/header'
-    %section.flex-1.my-8.container.m-auto.max-w-xl 
+    %section.flex-1.mt-8
       = alert || notice
       #content
         = yield
