--- a/app/javascript/css/tailwind.scss
+++ b/app/javascript/css/tailwind.scss
@@ -232,6 +232,42 @@ body {
 
 }
 
+.vertical-tabs-container {
+    border-radius: 2px;
+    border: 1px solid #ddd;
+    margin-bottom: 1.5rem;
+    overflow: hidden;
+}
+
+// .vertical-tabs-container::after {
+//     clear: both;
+//     content: "";
+//     display: table;
+// }
+
+
+// .vertical-tabs-container a {
+//     color: #003340;
+//     text-decoration: none;
+// }
+
+// .vertical-tabs-container .vertical-tabs {
+//     display: none;
+// }
+
+.vertical-tabs-container .vertical-tabs {
+    background-color: #FFFFFF;
+    display: inline;
+    float: left;
+    height: 18.75em;
+    width: 20%;
+}
+
+.tablinks.active {
+    background-color: #f7f7f7;
+    margin-right: -1px;
+}
+
 
 
 
