--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -21,3 +21,39 @@
   .button-row
     %p
       %a.button.button--vertical.button--large{href: "https://craftacademy.typeform.com/to/hkkxKQ"} Apply Now
+%section.text-center.paddingx-content.py-24
+  %h3 Directions
+  %p
+    You can participate in the Craft Academy bootcamp remotely and work from home, but we believe that students get the most out of the program by working near each other and the coaches.
+
+  .vertical-tabs-container
+    .vertical-tabs.flex.flex-col
+      %button.tablinks#defaultOpen{onclick: "openCity(event, 'gothenburg')"} Gothenburg
+      %button.tablinks{onclick: "openCity(event, 'stockholm')"} Stockholm
+
+    .vertical-tab-content-container
+      #gothenburg.tabcontent
+        = image_tag 'gothenburg.png', width: '300px'
+        %h3 Gothenburg
+        %p In Gothenburg, we are located at Chalmers Innovation Stena Center on Holtermansgatan 1
+        %p across from the Chalmers University main entrance.
+      #stockholm.tabcontent
+        = image_tag 'stockholm.png', width: '300px'
+        %h3 Stockholm
+        %p In Stockholm we are located at OpenLab on Valhallavägen 79 (in the vicinity of the Tekniska Högskolan).
+
+:javascript
+  document.getElementById("defaultOpen").click();
+  function openCity(evt, cityName) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(cityName).style.display = "block";
+    evt.currentTarget.className += " active";
+  }
