--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -25,18 +25,17 @@
   %h3 Directions
   %p
     You can participate in the Craft Academy bootcamp remotely and work from home, but we believe that students get the most out of the program by working near each other and the coaches.
-
-  .vertical-tabs-container
-    .vertical-tabs.flex.flex-col
-      %button.tablinks#defaultOpen{onclick: "openCity(event, 'gothenburg')"} Gothenburg
-      %button.tablinks{onclick: "openCity(event, 'stockholm')"} Stockholm
+  .flex
+    .vertical-tabs-container
+      .vertical-tabs
+        %button.tablinks#defaultOpen{onclick: "openCity(event, 'gothenburg')"} Gothenburg
+        %button.tablinks{onclick: "openCity(event, 'stockholm')"} Stockholm
 
     .vertical-tab-content-container
       #gothenburg.tabcontent
         = image_tag 'gothenburg.png', width: '300px'
         %h3 Gothenburg
-        %p In Gothenburg, we are located at Chalmers Innovation Stena Center on Holtermansgatan 1
-        %p across from the Chalmers University main entrance.
+        %p In Gothenburg, we are located at Chalmers Innovation Stena Center on Holtermansgatan 1, across from the Chalmers University main entrance.
       #stockholm.tabcontent
         = image_tag 'stockholm.png', width: '300px'
         %h3 Stockholm
