--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,31 +1,37 @@
 .intro
-  .text-center.py-24.paddingx-content 
+  .text-center.py-24.paddingx-content.text-white
     %h1 About Craft Academy
+    %br
     %p
       %strong
         Craft Academy is a twelve-week intensive course designed to take you from zero to junior programmer. We're a group of dedicated coaches with decades of coding experience.
 %hr
 %section.text-center.paddingx-content.py-24
   %article
-    %h3 Our mission
-    %h4.copy--left We aim to provide our students with the most effective training possible to prepare them - in an incredibly short time - to join the technical workforce, or build their own advanced projects.
-    %p.copy--left There is a strong need for web developers in Sweden and throughout the world. We train programmers who not only write great code, but who understand the industry's conventions, problem solve with intention, and are ready to join the workforce and be a productive member of a team. We believe that coding is a craft, not just the symbols you put into a program. To that end, we teach an ambitious array of coding skills, introducing students to dozens of tools and two coding languages, but we also teach coding methods like Agile and Test-Driven Development. These practices mold developers who will thrive in the real world.
+    %h3.text-orange Our mission
+    %br
+    %h4.text-ca-grey We aim to provide our students with the most effective training possible to prepare them - in an incredibly short time - to join the technical workforce, or build their own advanced projects.
+    %br
+    %p There is a strong need for web developers in Sweden and throughout the world. We train programmers who not only write great code, but who understand the industry's conventions, problem solve with intention, and are ready to join the workforce and be a productive member of a team. We believe that coding is a craft, not just the symbols you put into a program. To that end, we teach an ambitious array of coding skills, introducing students to dozens of tools and two coding languages, but we also teach coding methods like Agile and Test-Driven Development. These practices mold developers who will thrive in the real world.
 %hr
-.apply-section.text-center.paddingx-content.py-24
+.apply-section.text-center.paddingx-content.py-24.text-white
   .centered-row
     .column
       %h2 Apply now
+      %br
       %p
         %strong
           We start a new course every eight weeks and continuously review and accept applicants. The application process can take up to two weeks, so please apply in time!
   .button-row
+    %br
     %p
-      %a.button.button--vertical.button--large{href: "https://craftacademy.typeform.com/to/hkkxKQ"} Apply Now
+      %a.apply_button{href: "https://craftacademy.typeform.com/to/hkkxKQ"} Apply Now
+
 %section.text-center.paddingx-content.py-24
   %h3 Directions
   %p
     You can participate in the Craft Academy bootcamp remotely and work from home, but we believe that students get the most out of the program by working near each other and the coaches.
-  .flex
+  .map.flex
     .vertical-tabs-container
       .vertical-tabs
         %button.tablinks#defaultOpen{onclick: "openCity(event, 'gothenburg')"} Gothenburg
